--- a/html/Sweeps_Page.html
+++ b/html/Sweeps_Page.html
@@ -159,5 +159,9 @@
         </footer>
         <!-- =============Footer section End============= -->
     </main>
+
+
+    <!-- javaScript file link -->
+    <script src="../js/main.js"></script>
 </body>
 </html>
