--- a/index.html
+++ b/index.html
@@ -611,6 +611,6 @@
     </main>    
 
     <!-- ============= js link  ================-->
-    <script src="jS/main.js" type="text/javascript"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
